<resources>
    <string name="app_name">KAU-English_OOP</string>
    <string name="welcome_text">Welcome to LexiLearn</string>
    <string name="subtitle_text">English Experiences Tailored to Your Interests</string>
    <string name="join_button">Join</string>
    <string name="login_button">LogIn</string>


    <string name="nav_home">Home</string>
    <string name="nav_map">Explore</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_like">Like</string>
    <string name="nav_calendar">Calendar</string>


    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="apply">Apply</string>
    <string name="find_id">Find my ID</string>
    <string name="find_id_password">Find my ID And Passwrod</string>
    <string name="find_password">Find my password</string>
    <string name="close">Close</string>

    <string name="login_required">로그인이 필요합니다.</string>
    <string name="google_sign_in_failed">Google 로그인 실패</string>
    <string name="user_info_unavailable">사용자 정보를 가져올 수 없습니다.</string>
    <string name="firebase_auth_failed">Firebase 인증 실패</string>
    <string name="existing_account_login">이미 가입된 계정입니다. 로그인합니다.</string>
    <string name="user_check_failed">회원가입 여부 확인 실패</string>
    <string name="registration_success">회원가입 성공!</string>
    <string name="database_save_failed">DB 저장 실패</string>
    <string name="user_info_missing">사용자 정보가 없습니다.</string>
    <string name="database_fetch_failed">DB 조회 실패</string>
    <string name="signin_email">Signup or Signin by email</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name="donothave_permission">You do not have read permission</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
